<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSecondsText"
        style="@style/MaterialTextViewSemiAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/seconds"
        app:layout_constraintEnd_toEndOf="@+id/pickSeconds"
        app:layout_constraintStart_toStartOf="@+id/pickSeconds"
        app:layout_constraintTop_toBottomOf="@+id/pickSeconds" />

    <NumberPicker
        android:id="@+id/pickSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <NumberPicker
        android:id="@+id/pickMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pick_b_save"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/pickSeconds"
        app:layout_constraintStart_toStartOf="@+id/pickMinutes"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinutesText" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:tooltipText="@string/dish_choose_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/dish_choose_time" />

    <TextView
        android:id="@+id/textViewMinutesText"
        style="@style/MaterialTextViewSemiAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/minutes"
        app:layout_constraintEnd_toEndOf="@+id/pickMinutes"
        app:layout_constraintStart_toStartOf="@+id/pickMinutes"
        app:layout_constraintTop_toBottomOf="@+id/pickMinutes" />

    <Space
        android:layout_width="4dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toStartOf="@+id/pickSeconds"
        app:layout_constraintStart_toEndOf="@+id/pickMinutes"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>